fix: :bug: gap changed

--- a/doc-stetho/src/App.css
+++ b/doc-stetho/src/App.css
@@ -108,7 +108,7 @@
   list-style: none;
   padding: 0;
   display: flex;
-  gap: 9px;
+  gap: 8px;
   margin: 32px 0 0;
 
   .logo {
